@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 14,
+  "count": 19,
+  "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2022-08-10T00:00:00Z",
-      "count": 8,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-08-14T00:00:00Z",
       "count": 1,
@@ -36,6 +31,11 @@
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 9,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-08-24T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
